force-app/main/default/objects/OrderCartItem__c/OrderCartItem__c.object-meta.xml
<CustomObject>
    <label>OrderCartLine</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>OrderCartItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OrderCartLine</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>