force-app/main/default/objects/OrderCartItem__c/fields/OrderCart__c.field-meta.xml
<CustomField>
    <fullName>OrderCart__c</fullName>
    <label>OrderCart</label>
    <referenceTo>OrderCart__c</referenceTo>
    <relationshipLabel>OrderCartLine</relationshipLabel>
    <relationshipName>OrderCartLine</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>