force-app/main/default/objects/OrderCartItem__c/fields/OrderPoNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderPoNumber__c</fullName>
    <label>Order Po Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>