force-app/main/default/objects/OrderCartItem__c/fields/PMC_CPQ_DefaultBillingBlock__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_DefaultBillingBlock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PMC_CPQ_DefaultBillingBlock</label>
    <type>Checkbox</type>
</CustomField>