force-app/main/default/objects/OrderCartItem__c/fields/PMC_CPQ_Destination__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Destination__c</fullName>
    <label>PMC_CPQ_Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>