force-app/main/default/objects/OrderCartItem__c/fields/PMC_CPQ_ExchangeRate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ExchangeRate__c</fullName>
    <label>PMC_CPQ_ExchangeRate</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>