force-app/main/default/objects/OrderCartItem__c/fields/PMC_CPQ_NetUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_NetUnitPrice__c</fullName>
    <label>PMC_CPQ_NetUnitPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>