force-app/main/default/objects/OrderCartItem__c/fields/PMC_CPQ_UnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_UnitOfMeasure__c</fullName>
    <label>PMC_CPQ_UnitOfMeasure</label>
    <length>100</length>
    <type>Text</type>
</CustomField>