force-app/main/default/objects/OrderCartItem__c/fields/ReqShipmentDate__c.field-meta.xml
<CustomField>
    <fullName>ReqShipmentDate__c</fullName>
    <label>Req.ShipmentDate</label>
    <type>Date</type>
</CustomField>