force-app/main/default/objects/OrderCartItem__c/fields/SBQQ_PricebookEntryId__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_PricebookEntryId__c</fullName>
    <label>SBQQ_PricebookEntryId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>