force-app/main/default/objects/OrderCartItem__c/fields/SBQQ_Product__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_Product__c</fullName>
    <label>SBQQ_Product</label>
    <length>200</length>
    <type>Text</type>
</CustomField>