force-app/main/default/objects/OrderCartItem__c/fields/Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Ship_To__c</fullName>
    <label>Ship To</label>
    <length>100</length>
    <type>Text</type>
</CustomField>