force-app/main/default/objects/OrderCartItem__c/fields/ShipToDisplay__c.field-meta.xml
<CustomField>
    <fullName>ShipToDisplay__c</fullName>
    <label>Ship To Display</label>
    <length>255</length>
    <type>Text</type>
</CustomField>